# SkiilForge

./: .cursorrules  .env  .env.example  EDITOR_SETUP.md  README.md  debug_watcher.py  gitignore.txt  mcp.code-workspace  mcp.json  pyproject.toml  test_file1.py  test_file2.py  test_pattern_detector.py  testfile2.py
.cursor/: mcp.json
skillforge/: config.py
skillforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
skillforge/api/: cli.py  mcp_server.py
skillforge/core/: agent.py  composition_detector.py  language_parsers.py  pattern_detector.py  skill_crystallizer.py  skill_registry.py
skillforge/watchers/: fs_watcher.py
